# B-BoT

./: .gitignore  README.md
BBoT/src/dynamic_introspection/: CHANGELOG.rst
BBoT/src/get_gazebo_obj/: CMakeLists.txt  package.xml
BBoT/src/get_gazebo_obj/launch/: get_gazebo_obj_launch.launch
BBoT/src/get_gazebo_obj/scripts/: gazebo_pose.py
BBoT/src/grasping_obj/: CMakeLists.txt  package.xml
BBoT/src/move_to_point/: CMakeLists.txt  package.xml
BBoT/src/navigation/: CMakeLists.txt  package.xml
BBoT/src/navigation/launch/: mapping.launch  mapping_public.launch  navigation.launch  navigation_public.launch
BBoT/src/navigation/scripts/: move_base_goal_client.py
BBoT/src/take_images/: CMakeLists.txt
BBoT/src/take_images/launch/: take_images_launch.launch  take_images_launch_file.launch
BBoT/src/take_images/scripts/: camera_subscriber.py
BBoT/src/take_images/src/: camera_subscriber.py
BBoT/src/yolo_detection_obj/: CMakeLists.txt  package.xml
BBoT/src/yolo_detection_obj/launch/: yolo_detection_launch.launch  yolo_detection_launch_file.launch
BBoT/src/yolo_detection_obj/scripts/: detection_objects.py
BBoT/src/yolo_detection_obj/src/: detection_objects.py
BBoT/src/yolo_msg/: CMakeLists.txt  package.xml
BBoT/src/yolo_msg/msg/: MSGYolo.msg
dataset/: 001_list.txt  004_list.txt  006_list.txt  007_list.txt  count.txt  obj.names  test.txt
dataset/Images/: names.txt
dataset/Images/001/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+360 more)
dataset/Images/002/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+361 more)
dataset/Images/003/: 1.txt  10.txt  100.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  135.txt  136.txt  137.txt  138.txt  139.txt  14.txt  140.txt  141.txt  142.txt  (+352 more)
dataset/Images/004/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  (+76 more)
dataset/Images/005/: 1.txt  10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+61 more)
dataset/Images/006/: test.txt
dataset/Images/007/: train.txt
dataset/Images/008/: test.txt  train.txt
dataset/Labels/001/: Image0.txt  Image11.txt  Image13.txt  Image16.txt  Image17.txt  Image18.txt  Image20.txt  Image21.txt  Image210.txt  Image211.txt  (+62 more)
dataset/cfg/: obj.data  obj.names
dataset/v1.0_674/: 002_list.txt  003_list.txt  005_list.txt  008_list.txt  train.txt
(+660 files in other folders)
