<?xml version="1.0"?>
<package format="2">
  <name>get_gazebo_obj</name>
  <version>0.0.0</version>
  <description>The get_gazebo_obj package</description>

  <maintainer email="juliagm@todo.todo">juliagm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>yolo_msg</build_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>yolo_msg</build_export_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>yolo_msg</exec_depend>

</package>
