<?xml version="1.0"?>
<package format="2">
  <name>yolo_detection_obj</name>
  <version>0.0.0</version>
  <description>The yolo_detection_obj package</description>

  <maintainer email="juliagm@todo.todo">juliagm</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yolo_msg</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>yolo_msg</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>yolo_msg</exec_depend>

  <export>

  </export>
</package>
