<?xml version="1.0"?>
<package format="2">
  <name>yolo_msg</name>
  <version>0.0.0</version>
  <description>The yolo_msg package</description>

  <maintainer email="juliagm@todo.todo">juliagm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
